Fixes #5495.  Changed fieldset to div and added overflow:hidden to make it work.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@11961 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -294,7 +294,6 @@
 	background-repeat: no-repeat;
 	width: 16px;
 	height: 16px;
-	overflow: visible;
 	margin: 0;
 	padding: 0;
 }
